# grafica-hw2

./: .gitignore  CMakeLists.txt  build.sh  run.sh
src/: raytrace.cpp  scene.cpp  scene.h  simd.h  vmath.h
src/ext/: yocto_scn.cpp  yocto_scn.h
